--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 wgCanonicalNamespace: "",
                 wgCanonicalSpecialPageName: !1,
                 wgNamespaceNumber: 0,
-                wgPageName: "Бутырин,_Павел_Анфимович",
-                wgTitle: "Бутырин, Павел Анфимович",
+                wgPageName: "Васьковская,_Татьяна_Александровна",
+                wgTitle: "Васьковская, Татьяна Александровна",
                 wgCurRevisionId: 101687919,
                 wgRevisionId: 101687919,
                 wgArticleId: 6447626,
@@ -3288,7 +3288,7 @@
                 <!-- CentralNotice -->
             </div>
             <div class="mw-indicators mw-body-content"></div>
-            <h1 id="firstHeading" class="firstHeading" lang="ru">Бутырин, Павел Анфимович</h1>
+            <h1 id="firstHeading" class="firstHeading" lang="ru">Васьковская, Татьяна Александровна</h1>
             <div id="bodyContent" class="mw-body-content">
                 <div id="contentSub">
                     <div id="mw-fr-revisiontag" class="flaggedrevs_short flaggedrevs_draft_notsynced plainlinks noprint">
