--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="client-js" lang="ru" dir="ltr">
     <head>
         <meta charset="UTF-8" />
-        <title>Васьковская, Татьяна Александровна - А так?</title>
+        <title>Васьковская, Татьяна Александровна</title>
         <script>
             document.documentElement.className = "client-js";
             RLCONF = {
