--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
 		<a class="mw-jump-link" href="#mw-head">Перейти к навигации</a>
 		<a class="mw-jump-link" href="#searchInput">Перейти к поиску</a>
 		<div id="mw-content-text" lang="ru" dir="ltr" class="mw-content-ltr"><div class="mw-parser-output">
-<table class="infobox" style="" data-name="Учёный"><tbody><tr><th colspan="2" class="infobox-above" style="background:#eaecf0;">Павел Анфимович Бутырин</th></tr>
+<table class="infobox" style="" data-name="Учёный"><tbody><tr><th colspan="2" class="infobox-above" style="background:#eaecf0;">Васьковская Татьяна Александровна</th></tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Дата рождения</th>
 <td class="plainlist">
-<span class="no-wikidata" data-wikidata-property-id="P569"><a href="/wiki/15_%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82%D0%B0" title="15 августа">15 августа</a> <a href="/wiki/1949_%D0%B3%D0%BE%D0%B4" title="1949 год">1949</a></span><span style="display:none">(<span class="bday">1949-08-15</span>)</span> <span class="nowrap">(71 год)</span></td>
+<span class="no-wikidata" data-wikidata-property-id="P569"><a href="/wiki/18_%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82%D0%B0" title="18 июля">18 июля</a> <a href="/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980</a></span><span style="display:none">(<span class="bday">1949-08-15</span>)</span> <span class="nowrap">(71 год)</span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Место рождения</th>
 <td class="plainlist">
-<span data-wikidata-property-id="P19" class="no-wikidata"><a href="/wiki/%D0%A7%D0%B5%D0%BB%D1%8F%D0%B1%D0%B8%D0%BD%D1%81%D0%BA" title="Челябинск">Челябинск</a></span></td>
+<span data-wikidata-property-id="P19" class="no-wikidata"><a href="/wiki/%D0%A7%D0%B5%D0%BB%D1%8F%D0%B1%D0%B8%D0%BD%D1%81%D0%BA" title="Москва">Москва</a></span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Страна</th>
