--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <tr>
 <th class="plainlist" style="min-width:8em;">Дата рождения</th>
 <td class="plainlist">
-<span class="no-wikidata" data-wikidata-property-id="P569"><a href="/wiki/18_%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82%D0%B0" title="18 июля">18 июля</a> <a href="/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980</a></span><span style="display:none">(<span class="bday">1949-08-15</span>)</span> <span class="nowrap">(71 год)</span></td>
+<span class="no-wikidata" data-wikidata-property-id="P569"><a href="/wiki/18_%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82%D0%B0" title="18 июля">18 июля</a> <a href="/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980</a></span><span style="display:none">(<span class="bday">1980-07-18</span>)</span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Место рождения</th>
@@ -118,7 +118,8 @@
 <tr>
 <th class="plainlist" style="min-width:8em;">Учёное звание</th>
 <td class="plainlist">
-<span data-wikidata-property-id="P803" class="no-wikidata"><a href="/wiki/%D0%9F%D1%80%D0%BE%D1%84%D0%B5%D1%81%D1%81%D0%BE%D1%80" title="Профессор">профессор</a><br><a href="/wiki/%D0%A7%D0%BB%D0%B5%D0%BD%D1%8B-%D0%BA%D0%BE%D1%80%D1%80%D0%B5%D1%81%D0%BF%D0%BE%D0%BD%D0%B4%D0%B5%D0%BD%D1%82%D1%8B_%D0%A0%D0%90%D0%9D" title="Члены-корреспонденты РАН">член-корреспондент РАН</a></span></td>
+<span data-wikidata-property-id="P803" class="no-wikidata">
+<a title="Члены-корреспонденты АЭН">член-корреспондент АЭН</a></span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Научный руководитель</th>
