--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <li class="toclevel-1 tocsection-1"><a href="#Биография"><span class="tocnumber">1</span> <span class="toctext">Биография</span></a>
 <ul>
 <li class="toclevel-2 tocsection-2"><a href="#Научная_деятельность"><span class="tocnumber">1.1</span> <span class="toctext">Научная деятельность</span></a></li>
-<li class="toclevel-2 tocsection-3"><a href="#Общественная_деятельность"><span class="tocnumber">1.2</span> <span class="toctext">Общественная деятельность</span></a></li>
+
 </ul>
 </li>
 <li class="toclevel-1 tocsection-4"><a href="#Награды"><span class="tocnumber">2</span> <span class="toctext">Награды</span></a></li>
@@ -149,11 +149,13 @@
 
 <h2><span id=".D0.91.D0.B8.D0.BE.D0.B3.D1.80.D0.B0.D1.84.D0.B8.D1.8F"></span><span class="mw-headline" id="Биография">Биография</span></h2>
 <p>Родилась <a href="/wiki/15_%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82%D0%B0" title="18 июля">18 июля</a> <a href="/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980 года</a> в Москве.
-</p><p>В 1974 году окончил <a href="/wiki/%D0%A7%D0%B5%D0%BB%D1%8F%D0%B1%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%BF%D0%BE%D0%BB%D0%B8%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D0%B8%D0%BD%D1%81%D1%82%D0%B8%D1%82%D1%83%D1%82" class="mw-redirect" title="Челябинский политехнический институт">Челябинский политехнический институт</a>. В 1978 году окончил очную аспирантуру <a href="/wiki/%D0%9B%D0%9F%D0%98" class="mw-redirect" title="ЛПИ">Ленинградского политехнического института</a> (научный руководитель — <a href="/wiki/%D0%94%D0%B5%D0%BC%D0%B8%D1%80%D1%87%D1%8F%D0%BD,_%D0%9A%D0%B0%D0%BC%D0%BE_%D0%A1%D0%B5%D1%80%D0%BE%D0%BF%D0%BE%D0%B2%D0%B8%D1%87" title="Демирчян, Камо Серопович">К. С. Демирчян</a>), в которую поступил по приглашению академика <a href="/wiki/%D0%9D%D0%B5%D0%B9%D0%BC%D0%B0%D0%BD,_%D0%9B%D0%B5%D0%BE%D0%BD%D0%B8%D0%B4_%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82%D0%BE%D0%B2%D0%B8%D1%87" title="Нейман, Леонид Робертович">Л. Р. Неймана</a>.
-</p><p>С 1981 года работает в <a href="/wiki/%D0%9C%D0%BE%D1%81%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9_%D1%8D%D0%BD%D0%B5%D1%80%D0%B3%D0%B5%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D0%B8%D0%BD%D1%81%D1%82%D0%B8%D1%82%D1%83%D1%82" title="Московский энергетический институт">Московском энергетическом институте</a> (по приглашению К. С. Демирчяна), пройдя путь от ведущего инженера до заведующим кафедрой «Теоретические основы электротехники» (ТОЭ) (с 1999 года).
-</p><p>С 1991 по 1997 годы — работа по совместительству старшим научным сотрудником в <a href="/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D1%91%D0%BD%D0%BD%D1%8B%D0%B9_%D0%B8%D0%BD%D1%81%D1%82%D0%B8%D1%82%D1%83%D1%82_%D0%B2%D1%8B%D1%81%D0%BE%D0%BA%D0%B8%D1%85_%D1%82%D0%B5%D0%BC%D0%BF%D0%B5%D1%80%D0%B0%D1%82%D1%83%D1%80_%D0%A0%D0%90%D0%9D" title="Объединённый институт высоких температур РАН">Институте высоких температур</a>.
-</p><p>В 1994 году — защита докторской диссертации, тема: «Разработка аналитических и численно-аналитических методов решения уравнений состояния электрических цепей».
-В 2000 году — избран <a href="/wiki/%D0%A7%D0%BB%D0%B5%D0%BD%D1%8B-%D0%BA%D0%BE%D1%80%D1%80%D0%B5%D1%81%D0%BF%D0%BE%D0%BD%D0%B4%D0%B5%D0%BD%D1%82%D1%8B_%D0%A0%D0%90%D0%9D" title="Члены-корреспонденты РАН">членом-корреспондентом РАН</a> по Отделению энергетики, машиностроения, механики и процессов управления.
+</p>
+<p>В 2002 году досрочно с отличием окончила Московский энергетический институт (Технический университет) (далее – МЭИ), специальность менеджмент организации. 
+</p><p>В 2003 году там же защитила диссертацию на соискание ученой степени кандидата технических наук по специальности 05.09.05 «Теоретическая электротехника» по теме: «Диагностика линейных электрических цепей по частям». 
+</p><p>В 2019 году в АО «Научно-технический центр Федеральной сетевой компании Единой энергетической системы» защитила диссертацию на соискание ученой степени доктора технических наук по специальности 05.14.02 «Электрические станции и электроэнергетические системы» по теме: «Анализ оптимальных режимов электроэнергетических систем на основе множителей Лагранжа». 
+</p><p>С 2001 года работает в МЭИ на кафедре теоретических основ электротехники. В данный момент занимает должность доцента, является лектором курса теоретических основ электротехники. 
+</p><p>С 2005 года работает в организациях коммерческой инфраструктуры оптового рынка электроэнергии и мощности (Некоммерческое партнерство «Администратор торговой системы», Некоммерческое партнерство «Совет рынка», Акционерное общество «Администратор торговой системы») в подразделениях, отвечающих за мониторинг, анализ и перспективное развитие оптового рынка электроэнергии и мощности. В настоящее время занимаю должность начальника департамента развития аналитических систем АО «АТС».
+</p><p>Являюсь автором более 40 научных и учебных печатных работ.
 </p>
 <h3><span id=".D0.9D.D0.B0.D1.83.D1.87.D0.BD.D0.B0.D1.8F_.D0.B4.D0.B5.D1.8F.D1.82.D0.B5.D0.BB.D1.8C.D0.BD.D0.BE.D1.81.D1.82.D1.8C"></span><span class="mw-headline" id="Научная_деятельность">Научная деятельность</span></h3>
 <p>Область научных интересов: теоретическая электротехника, электроэнергетика, математическое моделирование, социология техники.
