--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <tr>
 <th class="plainlist" style="min-width:8em;">Научный руководитель</th>
 <td class="plainlist">
-<span data-wikidata-property-id="P184" class="no-wikidata"><a href="/wiki/%D0%94%D0%B5%D0%BC%D0%B8%D1%80%D1%87%D1%8F%D0%BD,_%D0%9A%D0%B0%D0%BC%D0%BE_%D0%A1%D0%B5%D1%80%D0%BE%D0%BF%D0%BE%D0%B2%D0%B8%D1%87" title="Демирчян, Камо Серопович">К. С. Демирчян</a></span></td>
+<span data-wikidata-property-id="P184" class="no-wikidata"><a href="" title="Бутырин, Павел Анфимович">П. А. Бутырин</a></span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Награды и&nbsp;премии</th>
@@ -154,34 +154,22 @@
 </p><p>В 2003 году там же защитила диссертацию на соискание ученой степени кандидата технических наук по специальности 05.09.05 «Теоретическая электротехника» по теме: «Диагностика линейных электрических цепей по частям». 
 </p><p>В 2019 году в АО «Научно-технический центр Федеральной сетевой компании Единой энергетической системы» защитила диссертацию на соискание ученой степени доктора технических наук по специальности 05.14.02 «Электрические станции и электроэнергетические системы» по теме: «Анализ оптимальных режимов электроэнергетических систем на основе множителей Лагранжа». 
 </p><p>С 2001 года работает в МЭИ на кафедре теоретических основ электротехники. В данный момент занимает должность доцента, является лектором курса теоретических основ электротехники. 
-</p><p>С 2005 года работает в организациях коммерческой инфраструктуры оптового рынка электроэнергии и мощности (Некоммерческое партнерство «Администратор торговой системы», Некоммерческое партнерство «Совет рынка», Акционерное общество «Администратор торговой системы») в подразделениях, отвечающих за мониторинг, анализ и перспективное развитие оптового рынка электроэнергии и мощности. В настоящее время занимаю должность начальника департамента развития аналитических систем АО «АТС».
-</p><p>Являюсь автором более 40 научных и учебных печатных работ.
+</p><p>С 2005 года работает в организациях коммерческой инфраструктуры оптового рынка электроэнергии и мощности (Некоммерческое партнерство «Администратор торговой системы», Некоммерческое партнерство «Совет рынка», Акционерное общество «Администратор торговой системы») в подразделениях, отвечающих за мониторинг, анализ и перспективное развитие оптового рынка электроэнергии и мощности. В настоящее время занимает должность начальника департамента развития аналитических систем АО «АТС».
+</p><p>Является автором более 40 научных и учебных печатных работ.
 </p>
 <h3><span id=".D0.9D.D0.B0.D1.83.D1.87.D0.BD.D0.B0.D1.8F_.D0.B4.D0.B5.D1.8F.D1.82.D0.B5.D0.BB.D1.8C.D0.BD.D0.BE.D1.81.D1.82.D1.8C"></span><span class="mw-headline" id="Научная_деятельность">Научная деятельность</span></h3>
-<p>Область научных интересов: теоретическая электротехника, электроэнергетика, математическое моделирование, социология техники.
-</p><p>Автор работ по теоретической электротехнике, информатике, социологии техники, таких как:
-</p>
-<ul><li>«Моделирование и машинный расчет электрических цепей» (в соавторстве с академиком К. С. Демирчяном, 1978)</li>
-<li>«Автоматизация физических исследований и эксперимента» (2000)</li>
-<li>«Социология техники» (в соавторстве с д.ф.н. А. Л. Андреевым и д.ф.н. В. Г. Гороховым (Германия), 2009)</li></ul>
-<p>Соавтор и редактор нескольких учебников и учебных пособий по электротехнике для высших, средних и начальных специальных учебных заведений.<br>
-В МЭИ создал новый учебный курс «Информационные технологии электротехники» и вместе с первым заместителем заведующего кафедрой, проф. Ф. Н. Шакирзяновым провел модернизацию всей лабораторной базы кафедры ТОЭ.
+<p>Область научных интересов: теоретическая электротехника, электроэнергетика, математическое моделирование.
+</p><p>Автор работ по теоретической электротехнике, информатике.
 </p>
 <h3><span id=".D0.9E.D0.B1.D1.89.D0.B5.D1.81.D1.82.D0.B2.D0.B5.D0.BD.D0.BD.D0.B0.D1.8F_.D0.B4.D0.B5.D1.8F.D1.82.D0.B5.D0.BB.D1.8C.D0.BD.D0.BE.D1.81.D1.82.D1.8C"></span><span class="mw-headline" id="Общественная_деятельность">Общественная деятельность</span></h3>
-<ul><li>Президент Академии электротехнических наук РФ (2010)</li>
-<li>заместитель председателя объединенного научного совета РАН по комплексной проблеме «Электрофизика, электроэнергетика, электротехника»</li>
-<li>заместитель председателя Научно-методического совета по электротехнике и электронике Минобрнауки РФ</li>
-<li>председатель диссертационного совета в МЭИ</li>
-<li>член экспертного совета по энергетике ВАК</li>
-<li>заместитель главного редактора журнала «Известия РАН. Энергетика»</li>
-<li>член редколлегии журналов «<a href="/wiki/%D0%AD%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%BE_(%D0%B6%D1%83%D1%80%D0%BD%D0%B0%D0%BB)" title="Электричество (журнал)">Электричество</a>» и «Электро».</li></ul>
+<ul><li>Член-корреспондент Академии электротехнических наук РФ (2019)</li>
+</ul>
 <h2><span id=".D0.9D.D0.B0.D0.B3.D1.80.D0.B0.D0.B4.D1.8B"></span><span class="mw-headline" id="Награды">Награды</span></h2>
 <ul><li><a href="/wiki/%D0%9F%D1%80%D0%B5%D0%BC%D0%B8%D1%8F_%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8_%D0%9F._%D0%9D._%D0%AF%D0%B1%D0%BB%D0%BE%D1%87%D0%BA%D0%BE%D0%B2%D0%B0" title="Премия имени П. Н. Яблочкова">Премия имени  П. Н. Яблочкова</a> (1995, <a href="/wiki/%D0%A0%D0%B0%D0%B4%D0%B8%D0%BD,_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%98%D1%81%D0%B0%D0%B0%D0%BA%D0%BE%D0%B2%D0%B8%D1%87" title="Радин, Владимир Исаакович">В. И. Радиным</a>, <a href="/wiki/%D0%A8%D0%B0%D0%BA%D0%B0%D1%80%D1%8F%D0%BD,_%D0%AE%D1%80%D0%B8%D0%B9_%D0%93%D0%B5%D0%B2%D0%BE%D0%BD%D0%B4%D0%BE%D0%B2%D0%B8%D1%87" title="Шакарян, Юрий Гевондович">Ю. Г. Шакаряном</a>) — за цикл работ «Теория, проектирование и моделирование управляемых машиновентильных систем»</li>
 <li><a href="/wiki/%D0%9F%D1%80%D0%B5%D0%BC%D0%B8%D1%8F_%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B0_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9_%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8_%D0%B2_%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D0%B8_%D0%BD%D0%B0%D1%83%D0%BA%D0%B8_%D0%B8_%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D0%BA%D0%B8" title="Премия Правительства Российской Федерации в области науки и техники">Премия Правительства Российской Федерации в области науки и техники</a> (2005) - в составе коллектива авторов за создание учебника «Основы современной энергетики».</li></ul>
 <h2><span id=".D0.A1.D1.81.D1.8B.D0.BB.D0.BA.D0.B8"></span><span class="mw-headline" id="Ссылки">Ссылки</span></h2>
-<ul><li><a rel="nofollow" class="external text" href="http://www.ras.ru/win/db/show_per.asp?P=.id-751.ln-ru">Бутырин, Павел Анфимович</a> на официальном сайте <a href="/wiki/%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%B0%D1%8F_%D0%B0%D0%BA%D0%B0%D0%B4%D0%B5%D0%BC%D0%B8%D1%8F_%D0%BD%D0%B0%D1%83%D0%BA" title="Российская академия наук">РАН</a></li>
-<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="http://isaran.ru/?q=ru/person&amp;guid=71700920-16F0-3E4C-838A-40104A43E2E9">Бутырин Павел Анфимович. (ИС АРАН)</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  isaran.ru. <small>Дата обращения: 13 июня 2016.</small></span></span></li>
-<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="http://www.acelsc.ru/node/11">Президент АЭН</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  acelsc.ru. <small>Дата обращения: 18 июня 2016.</small></span></span></li></ul>
+<ul>
+<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="http://www.acelsc.ru/node/710">Член-корреспондент АЭН</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  acelsc.ru. <small>Дата обращения: 18 июня 2016.</small></span></span></li></ul>
 <!-- 
 NewPP limit report
 Parsed by mw1401
