--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 <span data-wikidata-property-id="P108" class="no-wikidata"><a href="/wiki/%D0%9C%D0%AD%D0%98" class="mw-redirect" title="МЭИ">МЭИ</a></span></td>
 </tr>
 <tr>
-<th class="plainlist" style="min-width:8em;"><a href="/wiki/%D0%90%D0%BB%D1%8C%D0%BC%D0%B0-%D0%BC%D0%B0%D1%82%D0%B5%D1%80" title="Альма-матер">Альма-матер</a></th>
+<th class="plainlist" style="min-width:8em;"><a href="https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D1%8C%D0%BC%D0%B0-%D0%BC%D0%B0%D1%82%D0%B5%D1%80" title="Альма-матер">Альма-матер</a></th>
 <td class="plainlist">
-<span data-wikidata-property-id="P69" class="no-wikidata"><a href="/wiki/%D0%A7%D0%B5%D0%BB%D1%8F%D0%B1%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%BF%D0%BE%D0%BB%D0%B8%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D0%B8%D0%BD%D1%81%D1%82%D0%B8%D1%82%D1%83%D1%82" class="mw-redirect" title="Челябинский политехнический институт">Челябинский политехнический институт</a>; аспирантура ЛПИ.</span></td>
+<span data-wikidata-property-id="P69" class="no-wikidata"><a href="" class="mw-redirect" title="Московский Энергетический Институт">Московский Энергетический Институт</a>.</span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Учёная степень</th>
