--- a/index.html
+++ b/index.html
@@ -83,32 +83,32 @@
 <tr>
 <th class="plainlist" style="min-width:8em;">Дата рождения</th>
 <td class="plainlist">
-<span class="no-wikidata" data-wikidata-property-id="P569"><a href="/wiki/18_%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82%D0%B0" title="18 июля">18 июля</a> <a href="/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980</a></span><span style="display:none">(<span class="bday">1980-07-18</span>)</span></td>
+<span class="no-wikidata" data-wikidata-property-id="P569">18 июля <a href="https://ru.wikipedia.org/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980</a></span><span style="display:none">(<span class="bday">1980-07-18</span>)</span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Место рождения</th>
 <td class="plainlist">
-<span data-wikidata-property-id="P19" class="no-wikidata"><a href="/wiki/%D0%A7%D0%B5%D0%BB%D1%8F%D0%B1%D0%B8%D0%BD%D1%81%D0%BA" title="Москва">Москва</a></span></td>
+<span data-wikidata-property-id="P19" class="no-wikidata">Москва</span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Страна</th>
 <td class="plainlist">
-<span data-wikidata-property-id="P27" class="no-wikidata"><span class="nowrap" data-sort-value="СССР"><span class="flagicon"><a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BE%D1%8E%D0%B7_%D0%A1%D0%BE%D0%B2%D0%B5%D1%82%D1%81%D0%BA%D0%B8%D1%85_%D0%A1%D0%BE%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D1%85_%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA" title="Союз Советских Социалистических Республик"><img alt="" src="//upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Flag_of_the_Soviet_Union.svg/22px-Flag_of_the_Soviet_Union.svg.png" decoding="async" width="22" height="11" class="thumbborder" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Flag_of_the_Soviet_Union.svg/33px-Flag_of_the_Soviet_Union.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Flag_of_the_Soviet_Union.svg/44px-Flag_of_the_Soviet_Union.svg.png 2x" data-file-width="1200" data-file-height="600"></a></span>&nbsp;<a href="/wiki/%D0%A1%D0%BE%D1%8E%D0%B7_%D0%A1%D0%BE%D0%B2%D0%B5%D1%82%D1%81%D0%BA%D0%B8%D1%85_%D0%A1%D0%BE%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D1%85_%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA" title="Союз Советских Социалистических Республик"><span class="wrap">СССР</span></a></span> <br> <span class="nowrap" data-sort-value="Россия"><span class="flagicon"><a href="/wiki/%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F" title="Россия"><img alt="" src="//upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/22px-Flag_of_Russia.svg.png" decoding="async" width="22" height="15" class="thumbborder" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/33px-Flag_of_Russia.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/44px-Flag_of_Russia.svg.png 2x" data-file-width="900" data-file-height="600"></a></span>&nbsp;<a href="//ru.wikipedia.org/wiki/%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F" title="Россия"><span class="wrap">Россия</span></a></span></span></td>
+<span data-wikidata-property-id="P27" class="no-wikidata"><span class="nowrap" data-sort-value="СССР"><span class="flagicon"><a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BE%D1%8E%D0%B7_%D0%A1%D0%BE%D0%B2%D0%B5%D1%82%D1%81%D0%BA%D0%B8%D1%85_%D0%A1%D0%BE%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D1%85_%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA" title="Союз Советских Социалистических Республик"><img alt="" src="//upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Flag_of_the_Soviet_Union.svg/22px-Flag_of_the_Soviet_Union.svg.png" decoding="async" width="22" height="11" class="thumbborder" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Flag_of_the_Soviet_Union.svg/33px-Flag_of_the_Soviet_Union.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Flag_of_the_Soviet_Union.svg/44px-Flag_of_the_Soviet_Union.svg.png 2x" data-file-width="1200" data-file-height="600"></a></span>&nbsp;<a href="//ru.wikipedia.org/wiki/%D0%A1%D0%BE%D1%8E%D0%B7_%D0%A1%D0%BE%D0%B2%D0%B5%D1%82%D1%81%D0%BA%D0%B8%D1%85_%D0%A1%D0%BE%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D1%85_%D0%A0%D0%B5%D1%81%D0%BF%D1%83%D0%B1%D0%BB%D0%B8%D0%BA" title="Союз Советских Социалистических Республик"><span class="wrap">СССР</span></a></span> <br> <span class="nowrap" data-sort-value="Россия"><span class="flagicon"><a href="/wiki/%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F" title="Россия"><img alt="" src="//upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/22px-Flag_of_Russia.svg.png" decoding="async" width="22" height="15" class="thumbborder" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/33px-Flag_of_Russia.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Flag_of_Russia.svg/44px-Flag_of_Russia.svg.png 2x" data-file-width="900" data-file-height="600"></a></span>&nbsp;<a href="//ru.wikipedia.org/wiki/%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F" title="Россия"><span class="wrap">Россия</span></a></span></span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Научная сфера</th>
 <td class="plainlist">
-<span data-wikidata-property-id="P101" class="no-wikidata"><a href="/wiki/%D0%AD%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%BE%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D0%BA%D0%B0" title="Электротехника">электротехника</a></span></td>
+<span data-wikidata-property-id="P101" class="no-wikidata"><a href="https://ru.wikipedia.org/wiki/%D0%AD%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%BE%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D0%BA%D0%B0" title="Электротехника">электротехника</a></span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Место работы</th>
 <td class="plainlist">
-<span data-wikidata-property-id="P108" class="no-wikidata"><a href="/wiki/%D0%9C%D0%AD%D0%98" class="mw-redirect" title="МЭИ">МЭИ</a></span></td>
+<span data-wikidata-property-id="P108" class="no-wikidata"><a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%AD%D0%98" class="mw-redirect" title="МЭИ">МЭИ</a></span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;"><a href="https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D1%8C%D0%BC%D0%B0-%D0%BC%D0%B0%D1%82%D0%B5%D1%80" title="Альма-матер">Альма-матер</a></th>
 <td class="plainlist">
-<span data-wikidata-property-id="P69" class="no-wikidata"><a href="" class="mw-redirect" title="Московский Энергетический Институт">Московский Энергетический Институт</a>.</span></td>
+<span data-wikidata-property-id="P69" class="no-wikidata">Московский Энергетический Институт.</span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Учёная степень</th>
@@ -119,7 +119,7 @@
 <th class="plainlist" style="min-width:8em;">Учёное звание</th>
 <td class="plainlist">
 <span data-wikidata-property-id="P803" class="no-wikidata">
-<a title="Члены-корреспонденты АЭН">член-корреспондент АЭН</a></span></td>
+член-корреспондент АЭН</span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Научный руководитель</th>
@@ -132,7 +132,7 @@
 <span data-wikidata-property-id="P166" class="no-wikidata"><a href="/wiki/%D0%9F%D1%80%D0%B5%D0%BC%D0%B8%D1%8F_%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B0_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9_%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8_%D0%B2_%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D0%B8_%D0%BD%D0%B0%D1%83%D0%BA%D0%B8_%D0%B8_%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D0%BA%D0%B8" title="Премия Правительства Российской Федерации в области науки и техники"><img alt="Премия Правительства Российской Федерации в области науки и техники" src="//upload.wikimedia.org/wikipedia/commons/thumb/5/55/%D0%9F%D0%BE%D1%87%D1%91%D1%82%D0%BD%D1%8B%D0%B9_%D0%B7%D0%BD%D0%B0%D0%BA_%D0%BB%D0%B0%D1%83%D1%80%D0%B5%D0%B0%D1%82%D0%B0_%D0%BF%D1%80%D0%B5%D0%BC%D0%B8%D0%B8_%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B0_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9_%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8.png/20px-%D0%9F%D0%BE%D1%87%D1%91%D1%82%D0%BD%D1%8B%D0%B9_%D0%B7%D0%BD%D0%B0%D0%BA_%D0%BB%D0%B0%D1%83%D1%80%D0%B5%D0%B0%D1%82%D0%B0_%D0%BF%D1%80%D0%B5%D0%BC%D0%B8%D0%B8_%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B0_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9_%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8.png" decoding="async" width="20" height="36" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/5/55/%D0%9F%D0%BE%D1%87%D1%91%D1%82%D0%BD%D1%8B%D0%B9_%D0%B7%D0%BD%D0%B0%D0%BA_%D0%BB%D0%B0%D1%83%D1%80%D0%B5%D0%B0%D1%82%D0%B0_%D0%BF%D1%80%D0%B5%D0%BC%D0%B8%D0%B8_%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B0_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9_%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8.png/30px-%D0%9F%D0%BE%D1%87%D1%91%D1%82%D0%BD%D1%8B%D0%B9_%D0%B7%D0%BD%D0%B0%D0%BA_%D0%BB%D0%B0%D1%83%D1%80%D0%B5%D0%B0%D1%82%D0%B0_%D0%BF%D1%80%D0%B5%D0%BC%D0%B8%D0%B8_%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B0_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9_%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/5/55/%D0%9F%D0%BE%D1%87%D1%91%D1%82%D0%BD%D1%8B%D0%B9_%D0%B7%D0%BD%D0%B0%D0%BA_%D0%BB%D0%B0%D1%83%D1%80%D0%B5%D0%B0%D1%82%D0%B0_%D0%BF%D1%80%D0%B5%D0%BC%D0%B8%D0%B8_%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B0_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9_%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8.png/40px-%D0%9F%D0%BE%D1%87%D1%91%D1%82%D0%BD%D1%8B%D0%B9_%D0%B7%D0%BD%D0%B0%D0%BA_%D0%BB%D0%B0%D1%83%D1%80%D0%B5%D0%B0%D1%82%D0%B0_%D0%BF%D1%80%D0%B5%D0%BC%D0%B8%D0%B8_%D0%9F%D1%80%D0%B0%D0%B2%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D1%81%D1%82%D0%B2%D0%B0_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9_%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8.png 2x" data-file-width="87" data-file-height="156"></a> <br><a href="/wiki/%D0%9F%D1%80%D0%B5%D0%BC%D0%B8%D1%8F_%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8_%D0%9F._%D0%9D._%D0%AF%D0%B1%D0%BB%D0%BE%D1%87%D0%BA%D0%BE%D0%B2%D0%B0" title="Премия имени П. Н. Яблочкова">Премия имени П.&nbsp;Н.&nbsp;Яблочкова</a></span></td>
 </tr>
 </tbody></table>
-<p><b>Васьковская Татьяна Александровна</b> (род. <a href="/wiki/15_%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82%D0%B0" title="18 июля">18 июля</a> <a href="/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980 года</a>) — специалист в области теоретической электротехники, член-корреспондент АЭН (2019).
+<p><b>Васьковская Татьяна Александровна</b> (род. 18 июля <a href="/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980 года</a>) — специалист в области теоретической электротехники, член-корреспондент АЭН (2019).
 </p>
 <div id="toc" class="toc" role="navigation" aria-labelledby="mw-toc-heading"><input type="checkbox" role="button" id="toctogglecheckbox" class="toctogglecheckbox" style="display:none"><div class="toctitle" lang="ru" dir="ltr"><h2 id="mw-toc-heading">Содержание</h2><span class="toctogglespan"><label class="toctogglelabel" for="toctogglecheckbox"></label></span></div>
 <ul>
