--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 </div>
 
 <h2><span id=".D0.91.D0.B8.D0.BE.D0.B3.D1.80.D0.B0.D1.84.D0.B8.D1.8F"></span><span class="mw-headline" id="Биография">Биография</span></h2>
-<p>Родилась <a href="/wiki/15_%D0%B0%D0%B2%D0%B3%D1%83%D1%81%D1%82%D0%B0" title="18 июля">18 июля</a> <a href="/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980 года</a> в Москве.
+<p>Родилась 18 июля <a href="//ru.wikipedia.org/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980 года</a> в Москве.
 </p>
 <p>В 2002 году досрочно с отличием окончила Московский энергетический институт (Технический университет) (далее – МЭИ), специальность менеджмент организации. 
 </p><p>В 2003 году там же защитила диссертацию на соискание ученой степени кандидата технических наук по специальности 05.09.05 «Теоретическая электротехника» по теме: «Диагностика линейных электрических цепей по частям». 
