--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <tr>
 <th class="plainlist" style="min-width:8em;">Научный руководитель</th>
 <td class="plainlist">
-<span data-wikidata-property-id="P184" class="no-wikidata"><a href="" title="Бутырин, Павел Анфимович">П. А. Бутырин</a></span></td>
+<span data-wikidata-property-id="P184" class="no-wikidata"><a href="/wiki/%D0%91%D1%83%D1%82%D1%8B%D1%80%D0%B8%D0%BD,_%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB_%D0%90%D0%BD%D1%84%D0%B8%D0%BC%D0%BE%D0%B2%D0%B8%D1%87" title="Бутырин, Павел Анфимович">П. А. Бутырин</a></span></td>
 </tr>
 </tbody></table>
 <p><b>Васьковская Татьяна Александровна</b> (род. 18 июля <a href="https://ru.wikipedia.org/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980 года</a>) — специалист в области теоретической электротехники, член-корреспондент АЭН (2019).
@@ -150,7 +150,7 @@
 </p><p>В 2019 году в АО «Научно-технический центр Федеральной сетевой компании Единой энергетической системы» защитила диссертацию на соискание ученой степени доктора технических наук по специальности 05.14.02 «Электрические станции и электроэнергетические системы» по теме: «Анализ оптимальных режимов электроэнергетических систем на основе множителей Лагранжа». 
 </p><p>С 2001 года работает в МЭИ на кафедре теоретических основ электротехники. В данный момент занимает должность доцента, является лектором курса теоретических основ электротехники. 
 </p><p>С 2005 года работает в организациях коммерческой инфраструктуры оптового рынка электроэнергии и мощности (Некоммерческое партнерство «Администратор торговой системы», Некоммерческое партнерство «Совет рынка», Акционерное общество «Администратор торговой системы») в подразделениях, отвечающих за мониторинг, анализ и перспективное развитие оптового рынка электроэнергии и мощности. В настоящее время занимает должность начальника департамента развития аналитических систем АО «АТС».
-</p><p>Является автором более 40 научных и учебных печатных работ.
+</p><p>Является автором более 40 научных и учебных печатных работ, в том числе 
 </p>
 <h3><span id=".D0.9D.D0.B0.D1.83.D1.87.D0.BD.D0.B0.D1.8F_.D0.B4.D0.B5.D1.8F.D1.82.D0.B5.D0.BB.D1.8C.D0.BD.D0.BE.D1.81.D1.82.D1.8C"></span><span class="mw-headline" id="Научная_деятельность">Научная деятельность</span></h3>
 <p>Область научных интересов: теоретическая электротехника, электроэнергетика, математическое моделирование.
