--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <tr>
 <th class="plainlist" style="min-width:8em;">Научный руководитель</th>
 <td class="plainlist">
-<span data-wikidata-property-id="P184" class="no-wikidata"><a href="/wiki/%D0%91%D1%83%D1%82%D1%8B%D1%80%D0%B8%D0%BD,_%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB_%D0%90%D0%BD%D1%84%D0%B8%D0%BC%D0%BE%D0%B2%D0%B8%D1%87" title="Бутырин, Павел Анфимович">П. А. Бутырин</a></span></td>
+<span data-wikidata-property-id="P184" class="no-wikidata"><a href="//ru.wikipedia.org/wiki/%D0%91%D1%83%D1%82%D1%8B%D1%80%D0%B8%D0%BD,_%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB_%D0%90%D0%BD%D1%84%D0%B8%D0%BC%D0%BE%D0%B2%D0%B8%D1%87" title="Бутырин, Павел Анфимович">П. А. Бутырин</a></span></td>
 </tr>
 </tbody></table>
 <p><b>Васьковская Татьяна Александровна</b> (род. 18 июля <a href="https://ru.wikipedia.org/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980 года</a>) — специалист в области теоретической электротехники, член-корреспондент АЭН (2019).
