--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <tr>
 <th class="plainlist" style="min-width:8em;">Место работы</th>
 <td class="plainlist">
-<span data-wikidata-property-id="P108" class="no-wikidata"><a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%AD%D0%98" class="mw-redirect" title="МЭИ">МЭИ</a>, Ассоциация «НП Совет Рынка»</span></td>
+<span data-wikidata-property-id="P108" class="no-wikidata"><a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%AD%D0%98" class="mw-redirect" title="МЭИ">МЭИ</a>, Ассоциация «НП Совет Рынка», <a href="//ru.wikipedia.org/wiki/%D0%98%D0%BD%D1%81%D1%82%D0%B8%D1%82%D1%83%D1%82_%D0%BF%D1%80%D0%BE%D0%B1%D0%BB%D0%B5%D0%BC_%D1%83%D0%BF%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F_%D0%B8%D0%BC%D0%B5%D0%BD%D0%B8_%D0%92._%D0%90._%D0%A2%D1%80%D0%B0%D0%BF%D0%B5%D0%B7%D0%BD%D0%B8%D0%BA%D0%BE%D0%B2%D0%B0_%D0%A0%D0%90%D0%9D" title="Институт проблем управления имени В. А. Трапезникова РАН">ИПУ РАН</a></span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;"><a href="https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D1%8C%D0%BC%D0%B0-%D0%BC%D0%B0%D1%82%D0%B5%D1%80" title="Альма-матер">Альма-матер</a></th>
@@ -166,7 +166,7 @@
 </ul>
 <h2><span id=".D0.A1.D1.81.D1.8B.D0.BB.D0.BA.D0.B8"></span><span class="mw-headline" id="Ссылки">Ссылки</span></h2>
 <ul>
-<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="http://www.acelsc.ru/node/710">Член-корреспондент АЭН</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  acelsc.ru. <small>Дата обращения: 18 июня 2016.</small></span></span></li></ul>
+<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="http://www.acelsc.ru/node/710">Член-корреспондент АЭН</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  acelsc.ru.</span></span></li></ul>
 <!-- 
 NewPP limit report
 Parsed by mw1401
