--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <tr>
 <th class="plainlist" style="min-width:8em;"><a href="https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D1%8C%D0%BC%D0%B0-%D0%BC%D0%B0%D1%82%D0%B5%D1%80" title="Альма-матер">Альма-матер</a></th>
 <td class="plainlist">
-<span data-wikidata-property-id="P69" class="no-wikidata">Московский Энергетический Институт.</span></td>
+<span data-wikidata-property-id="P69" class="no-wikidata">Московский Энергетический Институт</span></td>
 </tr>
 <tr>
 <th class="plainlist" style="min-width:8em;">Учёная степень</th>
@@ -134,6 +134,7 @@
 <li class="toclevel-1 tocsection-1"><a href="#Биография"><span class="tocnumber">1</span> <span class="toctext">Биография</span></a>
 <ul>
 <li class="toclevel-2 tocsection-2"><a href="#Научная_деятельность"><span class="tocnumber">1.1</span> <span class="toctext">Научная деятельность</span></a></li>
+<li class="toclevel-2 tocsection-2"><a href="#Общественная_деятельность"><span class="tocnumber">1.2</span> <span class="toctext">Общественная деятельность</span></a></li>
 
 </ul>
 </li>
