--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
-<!-- <?php
-    session_start();
-    if (isset($_GET['exit'])) {
-    	session_destroy();
-    	header('Location: /');
-    	exit();
-    } else if (isset($_SESSION['id'])) {
-    	require('inc/cabinet.html');
-    } else if (isset($_GET['action'])) {
-    	$success = @include('inc/' . $_GET['action'] . '.html');
-    	if ($success != 1) {
-    		header('Location: /');
-    	}
-    } else {
-    	require('inc/landing.html');
-    }
-    $_SESSION['message'] = '';
-    ?> -->
 <!DOCTYPE html>
 <html class="client-js" lang="ru" dir="ltr">
     <head>
@@ -125,7 +107,7 @@
                                     <th colspan="2" class="infobox-above" style="background:#eaecf0;">Владимир Владимирович Путин</th>
                                 </tr>
                                 <tr>
-                                    <td colspan="2" class="infobox-image" style=""> <span data-wikidata-property-id="P18" class="no-wikidata"><a href="//commons.wikimedia.org/wiki/File:Vladimir_Putin_11-10-2020_(cropped).jpg?uselang=ru" class="image"><img alt="Vladimir Putin 11-10-2020 (cropped).jpg" src="//upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/274px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg" decoding="async" width="274" height="357" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/411px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/548px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg 2x" data-file-width="826" data-file-height="1076"></a></span> </td>
+                                    <td colspan="2" class="infobox-image" style=""> <span data-wikidata-property-id="P18" class="no-wikidata"><a href="//commons.wikimedia.org/wiki/File:Vladimir_Putin_11-10-2020_(cropped).jpg?uselang=ru" class="image"><img alt="Vladimir Putin 11-10-2020 (cropped).jpg" src="/vaskovskayata.jpg" decoding="async" width="274" height="357" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/411px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/548px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg 2x" data-file-width="826" data-file-height="1076"></a></span> </td>
                                 </tr>
                                 <tr>
                                     <td colspan="2" class="nomobile plainlist" style="text-align:center;">
