--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									<td colspan="2" class="infobox-image" style="">
 										<span data-wikidata-property-id="P18" class="no-wikidata">
 											<a href="//commons.wikimedia.org/wiki/File:Vladimir_Putin_11-10-2020_(cropped).jpg?uselang=ru" class="image">
-												<img src="/vaskovskayata.jpg" decoding="async" width="274" height="357" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/411px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/548px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg 2x" data-file-width="826" data-file-height="1076">
+												<img src="/wiki/vaskovskayata.jpg" decoding="async" width="274" height="357" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/411px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/548px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg 2x" data-file-width="826" data-file-height="1076">
 											</a>
 										</span>
 									</td>
