--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
 						<h2><span id=".D0.A1.D1.81.D1.8B.D0.BB.D0.BA.D0.B8"></span><span class="mw-headline" id="Ссылки">Ссылки</span></h2>
 						<ul>
 							<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="http://www.acelsc.ru/node/710">Член-корреспондент АЭН</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  acelsc.ru.</span></span></li>
+							<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="https://www.ipu.ru/node/37180">Старший научный сотрудник ИПУ РАН</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  ipu.ru.</span></span></li>
 						</ul>
 						<!-- 
 							NewPP limit report
