--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
 										<li class="toclevel-2 tocsection-2"><a href="#Общественная_деятельность"><span class="tocnumber">1.2</span> <span class="toctext">Общественная деятельность</span></a></li>
 									</ul>
 								</li>
-								<li class="toclevel-1 tocsection-4"><a href="#Награды"><span class="tocnumber">2</span> <span class="toctext">Награды</span></a></li>
-								<li class="toclevel-1 tocsection-5"><a href="#Ссылки"><span class="tocnumber">3</span> <span class="toctext">Ссылки</span></a></li>
+								<li class="toclevel-1 tocsection-4"><a href="#Библиография"><span class="tocnumber">2</span> <span class="toctext">Библиография</span></a></li>
+								<li class="toclevel-1 tocsection-4"><a href="#Награды"><span class="tocnumber">3</span> <span class="toctext">Награды</span></a></li>
+								<li class="toclevel-1 tocsection-5"><a href="#Ссылки"><span class="tocnumber">4</span> <span class="toctext">Ссылки</span></a></li>
 							</ul>
 						</div>
 						<h2><span id=".D0.91.D0.B8.D0.BE.D0.B3.D1.80.D0.B0.D1.84.D0.B8.D1.8F"></span><span class="mw-headline" id="Биография">Биография</span></h2>
@@ -206,12 +207,19 @@
 						<ul>
 							<li>Член-корреспондент Академии электротехнических наук РФ (2019)</li>
 						</ul>
+						<h2><span></span><span class="mw-headline" id="Библиография">Библиография</span></h2>
+						<ul>
+							<li>Татьяна Александровна Васьковская. Применение линейного регрессионного анализа при моделировании и прогнозировании цен оптового рынка электроэнергии. Вестник МЭИ, 96-103, 2015.</li>
+							<li>Татьяна Александровна Васьковская. Новая декомпозиция узловых цен на вклады ценообразующих заявок при оптимизации режимов электрических систем. Электричество, 21-31, 2015.</li>
+							<li>Татьяна Александровна Васьковская. Вопросы формирования равновесных узловых цен оптового рынка электроэнергии. Электрические станции, 25-32, 2017.</li>
+							<li>Татьяна Александровна Васьковская, Борис Александрович Клюс. Проектирование рынка электроэнергии с накопителями энергии. Электричество, 31-43, 2020.</li>
+						</ul>
 						<h2><span id=".D0.9D.D0.B0.D0.B3.D1.80.D0.B0.D0.B4.D1.8B"></span><span class="mw-headline" id="Награды">Награды</span></h2>
 						<ul>
 							<li>Премия Российской академии наук (медаль РАН за лучшую научную студенческую работу, 2000 год);</li>
 							<li>Лауреатство в конкурсе «Новая генерация» (2004 год) и Минобразования РФ (медаль за лучшую научную студенческую работу, 2000 год).</li>
 						</ul>
-						<h2><span id=".D0.A1.D1.81.D1.8B.D0.BB.D0.BA.D0.B8"></span><span class="mw-headline" id="Ссылки">Ссылки</span></h2>
+												<h2><span id=".D0.A1.D1.81.D1.8B.D0.BB.D0.BA.D0.B8"></span><span class="mw-headline" id="Ссылки">Ссылки</span></h2>
 						<ul>
 							<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="http://www.acelsc.ru/node/710">Член-корреспондент АЭН</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  acelsc.ru.</span></span></li>
 							<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="https://www.ipu.ru/node/37180">Старший научный сотрудник ИПУ РАН</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  ipu.ru.</span></span></li>
