--- a/mobile.html
+++ b/mobile.html
@@ -58,7 +58,7 @@
 		<link rel="alternate" type="application/x-wiki" title="Править" href="/w/index.php?title=%D0%91%D1%83%D1%82%D1%8B%D1%80%D0%B8%D0%BD,_%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB_%D0%90%D0%BD%D1%84%D0%B8%D0%BC%D0%BE%D0%B2%D0%B8%D1%87&amp;action=edit">
 		<link rel="edit" title="Править" href="/w/index.php?title=%D0%91%D1%83%D1%82%D1%8B%D1%80%D0%B8%D0%BD,_%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB_%D0%90%D0%BD%D1%84%D0%B8%D0%BC%D0%BE%D0%B2%D0%B8%D1%87&amp;action=edit">
 		<link rel="apple-touch-icon" href="/static/apple-touch/wikipedia.png">
-		<link rel="shortcut icon" href="/static/favicon/wikipedia.ico">
+		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="search" type="application/opensearchdescription+xml" href="/w/opensearch_desc.php" title="Википедия (ru)">
 		<link rel="EditURI" type="application/rsd+xml" href="//ru.wikipedia.org/w/api.php?action=rsd">
 		<link rel="license" href="//creativecommons.org/licenses/by-sa/3.0/">
