--- a/mobile.html
+++ b/mobile.html
@@ -58,7 +58,7 @@
 		<link rel="alternate" type="application/x-wiki" title="Править" href="/w/index.php?title=%D0%91%D1%83%D1%82%D1%8B%D1%80%D0%B8%D0%BD,_%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB_%D0%90%D0%BD%D1%84%D0%B8%D0%BC%D0%BE%D0%B2%D0%B8%D1%87&amp;action=edit">
 		<link rel="edit" title="Править" href="/w/index.php?title=%D0%91%D1%83%D1%82%D1%8B%D1%80%D0%B8%D0%BD,_%D0%9F%D0%B0%D0%B2%D0%B5%D0%BB_%D0%90%D0%BD%D1%84%D0%B8%D0%BC%D0%BE%D0%B2%D0%B8%D1%87&amp;action=edit">
 		<link rel="apple-touch-icon" href="/static/apple-touch/wikipedia.png">
-		<link rel="shortcut icon" href="/favicon.ico">
+		<link rel="shortcut icon" href="/static/favicon/wikipedia.ico">
 		<link rel="search" type="application/opensearchdescription+xml" href="/w/opensearch_desc.php" title="Википедия (ru)">
 		<link rel="EditURI" type="application/rsd+xml" href="//ru.wikipedia.org/w/api.php?action=rsd">
 		<link rel="license" href="//creativecommons.org/licenses/by-sa/3.0/">
@@ -98,9 +98,7 @@
 											<tr>
 												<td colspan="2" class="infobox-image" style="">
 													<span data-wikidata-property-id="P18" class="no-wikidata">
-														<a href="//commons.wikimedia.org/wiki/File:Vladimir_Putin_11-10-2020_(cropped).jpg?uselang=ru" class="image">
-															<img src="/wiki/vaskovskayata.jpg" decoding="async" width="274" height="357" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/411px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/1/19/Vladimir_Putin_11-10-2020_%28cropped%29.jpg/548px-Vladimir_Putin_11-10-2020_%28cropped%29.jpg 2x" data-file-width="826" data-file-height="1076">
-														</a>
+														<img src="/vaskovskayata.jpg" decoding="async" width="274" height="357" data-file-width="826" data-file-height="1076">
 													</span>
 												</td>
 											</tr>
