--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
 							</ul>
 						</div>
 						<h2><span id=".D0.91.D0.B8.D0.BE.D0.B3.D1.80.D0.B0.D1.84.D0.B8.D1.8F"></span><span class="mw-headline" id="Биография">Биография</span></h2>
-						<p>Родилась 18 июля <a href="//ru.wikipedia.org/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980 года</a> в Москве.</p>
-						<p>В 2002 году досрочно с отличием окончила Московский энергетический институт (Технический университет) (далее – МЭИ), специальность менеджмент организации. </p>
+						<p>Родилась 18 июля <a href="http://ru.wikipedia.org/wiki/1980_%D0%B3%D0%BE%D0%B4" title="1980 год">1980 года</a> в Москве.</p>
+						<p>В 2002 году досрочно с отличием окончила <a href="http://ru.wikipedia.org/wiki/%D0%9C%D0%BE%D1%81%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9_%D1%8D%D0%BD%D0%B5%D1%80%D0%B3%D0%B5%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D0%B8%D0%BD%D1%81%D1%82%D0%B8%D1%82%D1%83%D1%82" title="Московский энергетический институт">Московский энергетический институт</a> (Технический университет) (далее – МЭИ), специальность менеджмент организации. </p>
 						<p>В 2003 году там же защитила диссертацию на соискание ученой степени кандидата технических наук по специальности 05.09.05 «Теоретическая электротехника» по теме: «Диагностика линейных электрических цепей по частям». </p>
 						<p>В 2019 году в АО «Научно-технический центр Федеральной сетевой компании Единой энергетической системы» защитила диссертацию на соискание ученой степени доктора технических наук по специальности 05.14.02 «Электрические станции и электроэнергетические системы» по теме: «Анализ оптимальных режимов электроэнергетических систем на основе множителей Лагранжа». </p>
 						<p>С 2001 года работает в МЭИ на кафедре теоретических основ электротехники. В данный момент занимает должность доцента, является лектором курса теоретических основ электротехники. </p>
@@ -205,7 +205,7 @@
 						<p>Автор работ по теоретической электротехнике, информатике.</p>
 						<h3><span id=".D0.9E.D0.B1.D1.89.D0.B5.D1.81.D1.82.D0.B2.D0.B5.D0.BD.D0.BD.D0.B0.D1.8F_.D0.B4.D0.B5.D1.8F.D1.82.D0.B5.D0.BB.D1.8C.D0.BD.D0.BE.D1.81.D1.82.D1.8C"></span><span class="mw-headline" id="Общественная_деятельность">Общественная деятельность</span></h3>
 						<ul>
-							<li>Член-корреспондент Академии электротехнических наук РФ (2019)</li>
+							<li><a href="http://ru.wikipedia.org/wiki/%D0%A7%D0%BB%D0%B5%D0%BD-%D0%BA%D0%BE%D1%80%D1%80%D0%B5%D1%81%D0%BF%D0%BE%D0%BD%D0%B4%D0%B5%D0%BD%D1%82" title="Член-корреспондент">Член-корреспондент</a> Академии электротехнических наук РФ (2019)</li>
 						</ul>
 						<h2><span></span><span class="mw-headline" id="Библиография">Библиография</span></h2>
 						<ul>
