--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 						</ul>
 						<h2><span id=".D0.9D.D0.B0.D0.B3.D1.80.D0.B0.D0.B4.D1.8B"></span><span class="mw-headline" id="Награды">Награды</span></h2>
 						<ul>
-							<li>Премия Российской академии наук (медаль РАН за лучшую научную студенческую работу, 2000 год);</li>
+							<li>Премия Российской академии наук (медаль <a href="https://ru.wikipedia.org/wiki/%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%B0%D1%8F_%D0%B0%D0%BA%D0%B0%D0%B4%D0%B5%D0%BC%D0%B8%D1%8F_%D0%BD%D0%B0%D1%83%D0%BA" title="Российская академия наук">РАН</a> за лучшую научную студенческую работу, 2000 год);</li>
 							<li>Лауреатство в конкурсе «Новая генерация» (2004 год) и Минобразования РФ (медаль за лучшую научную студенческую работу, 2000 год).</li>
 						</ul>
 												<h2><span id=".D0.A1.D1.81.D1.8B.D0.BB.D0.BA.D0.B8"></span><span class="mw-headline" id="Ссылки">Ссылки</span></h2>
