--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
 						<h2><span></span><span class="mw-headline" id="Библиография">Библиография</span></h2>
 						<ul>
 							<li>П.А. Бутырин, Т.А. Васьковская, В.В. Каратаев, С.В. Материкин. Автоматизация физических исследований и эксперимента: компьютерные измерения и виртуальные приборы на основе LabVIEW 7 (30 лекций). «ДМК Пресс», 2005.</li>							<li>Татьяна Александровна Васьковская. Применение линейного регрессионного анализа при моделировании и прогнозировании цен оптового рынка электроэнергии. «Вестник МЭИ», 96-103, 2015.</li>
-							<li>Татьяна Александровна Васьковская. Новая декомпозиция узловых цен на вклады ценообразующих заявок при оптимизации режимов электрических систем. «Электричество», 21-31, 2015.</li>
-							<li>Татьяна Александровна Васьковская. Вопросы формирования равновесных узловых цен оптового рынка электроэнергии. «Электрические станции», 25-32, 2017.</li>
-							<li>Татьяна Александровна Васьковская, Борис Александрович Клюс. Проектирование рынка электроэнергии с накопителями энергии. <a href="https://ru.wikipedia.org/wiki/%D0%AD%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%BE_(%D0%B6%D1%83%D1%80%D0%BD%D0%B0%D0%BB)" title="Электричество (журнал)">«Электричество»</a>, 31-43, 2020.</li>
+							<li>Т.А. Васьковская. Новая декомпозиция узловых цен на вклады ценообразующих заявок при оптимизации режимов электрических систем. «Электричество», 21-31, 2015.</li>
+							<li>Т.А. Васьковская. Вопросы формирования равновесных узловых цен оптового рынка электроэнергии. «Электрические станции», 25-32, 2017.</li>
+							<li>Т.А. Васьковская, Б.А. Клюс. Проектирование рынка электроэнергии с накопителями энергии. <a href="https://ru.wikipedia.org/wiki/%D0%AD%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%BE_(%D0%B6%D1%83%D1%80%D0%BD%D0%B0%D0%BB)" title="Электричество (журнал)">«Электричество»</a>, 31-43, 2020.</li>
 						</ul>
 						<h2><span id=".D0.9D.D0.B0.D0.B3.D1.80.D0.B0.D0.B4.D1.8B"></span><span class="mw-headline" id="Награды">Награды</span></h2>
 						<ul>
