--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
 						<ul>
 							<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="http://www.acelsc.ru/node/710">Член-корреспондент АЭН</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  acelsc.ru.</span></span></li>
 							<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="https://www.ipu.ru/node/37180">Старший научный сотрудник ИПУ РАН</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.  ipu.ru.</span></span></li>
+							<li><span class="citation"><span class="citation"><span lang="und"><a rel="nofollow" class="external text" href="event.html">Анонс мероприятий</a></span><span class="hidden-ref" style="display:none"><b>&nbsp;<span class="ref-info" style="cursor:help;" title="на неопределённом языке">(неопр.)</span></b></span>.</span></span></li>
 						</ul>
 						<!-- 
 							NewPP limit report
