--- a/events.html
+++ b/events.html
@@ -1,6 +1,55 @@
-<html>
-<title>Мероприятия</title>
-<body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Мероприятия - Татьяна Васьковская</title>
 
+	<link rel="stylesheet" href="event.css">
+</head>
+<body>
+	<div class="wrap">
+		<div class="left">
+			<a href="/" class="chief-link">
+				<img src="/img/arrow.png">
+				<span>На главную</span>
+			</a>
+			<div class="vertical-text">
+				Мероприятия
+			</div>
+		</div>
+		<div class="right">
+			<table>
+				<thead>
+					<tr>
+						<th>Планируемые</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Поспать</td>
+					</tr>
+					<tr>
+						<td>Помыться</td>
+					</tr>
+				</tbody>
+			</table>
+			<table>
+				<thead>
+					<tr>
+						<th>Прошедшие</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Поесть</td>
+					</tr>
+					<tr>
+						<td>Попить чай</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </body>
 </html>
