--- a/events.html
+++ b/events.html
@@ -1,52 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Мероприятия - Татьяна Васьковская</title>
 
-	<link rel="stylesheet" href="event.css">
+	<link rel="stylesheet" href="/events.css">
 </head>
 <body>
 	<div class="wrap">
-		<div class="left">
-			<a href="/" class="chief-link">
-				<img src="/img/arrow.png">
-				<span>На главную</span>
-			</a>
-			<div class="vertical-text">
-				Мероприятия
-			</div>
-		</div>
-		<div class="right">
-			<div>tatiana.vaskovskaya@gmail.com</div>
+		<header>
+			<h1>Мероприятия</h1>
+			<a href="/">На главную</a>
+		</header>
+		<div>
 			<table>
 				<thead>
-					<tr>
-						<th>Планируемые</th>
-					</tr>
+					<tr><td>Планируемые</td></tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td>Поспать</td>
+						<td class="child">
+							16.02.2021
+						</td>
+						<td class="child">
+							<div>Поспать</div>
+							<div>В кровати</div>
+						</td>
 					</tr>
 					<tr>
-						<td>Помыться</td>
+						<td class="child">
+							16.02.2021
+						</td>
+						<td class="child">
+							<div>Поесть</div>
+							<div>На кухне</div>
+						</td>
 					</tr>
 				</tbody>
 			</table>
 			<table>
 				<thead>
-					<tr>
-						<th>Прошедшие</th>
-					</tr>
+					<tr><td>Прошедшие</td></tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td>Поесть</td>
+						<td class="child">
+							14.02.2021
+						</td>
+						<td class="child">
+							<div>Побегать</div>
+							<div>По улице</div>
+						</td>
 					</tr>
 					<tr>
-						<td>Попить чай</td>
+						<td class="child">
+							14.02.2021
+						</td>
+						<td class="child">
+							<div>Попрыгать</div>
+							<div>На диване</div>
+						</td>
 					</tr>
 				</tbody>
 			</table>
