Добавлены почтовый адрес, принимающая организация и название лекции

--- a/events.html
+++ b/events.html
@@ -10,8 +10,9 @@
 <body>
 	<div class="wrap">
 		<header>
-			<h1>Мероприятия</h1>
-			<a href="/">На главную</a>
+			<div><h1>Мероприятия</h1>
+			<a href="/">На главную</a></div>
+			<div>Лектор: tatiana.vaskovskaya@gmail.com</div>
 		</header>
 		<div>
 			<table>
@@ -21,14 +22,14 @@
 				<tbody>
 					<tr>
 						<td class="child">
-							16.02.2021
+							--.--.2021
 						</td>
 						<td class="child">
-							<div>Поспать</div>
-							<div>В кровати</div>
+							<div>Развитие и управление интеллектуальными энергетическими системами в условиях цифровой экономики</div>
+							<div>ФГБОУ ВО «Казанский государственный энергетический университет»</div>
 						</td>
 					</tr>
-					<tr>
+<!--					<tr>
 						<td class="child">
 							16.02.2021
 						</td>
@@ -36,10 +37,10 @@
 							<div>Поесть</div>
 							<div>На кухне</div>
 						</td>
-					</tr>
+					</tr>-->
 				</tbody>
 			</table>
-			<table>
+<!--			<table>
 				<thead>
 					<tr><td>Прошедшие</td></tr>
 				</thead>
@@ -63,7 +64,7 @@
 						</td>
 					</tr>
 				</tbody>
-			</table>
+			</table>-->
 		</div>
 	</div>
 </body>
