Поправил структуру, разобрался с непереносящимися строками.

--- a/events.html
+++ b/events.html
@@ -10,8 +10,10 @@
 <body>
 	<div class="wrap">
 		<header>
-			<div><h1>Мероприятия</h1>
-			<a href="/">На главную</a></div>
+			<div>
+				<h1>Мероприятия</h1>
+				<a href="/">На главную</a>
+			</div>
 			<div>Лектор: tatiana.vaskovskaya@gmail.com</div>
 		</header>
 		<div>
@@ -29,42 +31,15 @@
 							<div>ФГБОУ ВО «Казанский государственный энергетический университет»</div>
 						</td>
 					</tr>
-<!--					<tr>
-						<td class="child">
-							16.02.2021
-						</td>
-						<td class="child">
-							<div>Поесть</div>
-							<div>На кухне</div>
-						</td>
-					</tr>-->
 				</tbody>
 			</table>
-<!--			<table>
+			<table>
 				<thead>
 					<tr><td>Прошедшие</td></tr>
 				</thead>
 				<tbody>
-					<tr>
-						<td class="child">
-							14.02.2021
-						</td>
-						<td class="child">
-							<div>Побегать</div>
-							<div>По улице</div>
-						</td>
-					</tr>
-					<tr>
-						<td class="child">
-							14.02.2021
-						</td>
-						<td class="child">
-							<div>Попрыгать</div>
-							<div>На диване</div>
-						</td>
-					</tr>
 				</tbody>
-			</table>-->
+			</table>
 		</div>
 	</div>
 </body>
