Добавил отделитель события от места.
div с классом event получил рамку снизу и padding снизу.

--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
 							--.--.2021
 						</td>
 						<td class="child">
-							<div>Развитие и управление интеллектуальными энергетическими системами в условиях цифровой экономики</div>
+							<div class="event">Развитие и управление интеллектуальными энергетическими системами в условиях цифровой экономики</div>
 							<div>ФГБОУ ВО «Казанский государственный энергетический университет»</div>
 						</td>
 					</tr>
