Ссылка на e-mail

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								<tr>
 									<th class="plainlist" style="min-width:8em;">E-mail</th>
 									<td class="plainlist">
-										<span data-wikidata-property-id="P184" class="no-wikidata">tatiana.vaskovskaya@gmail.com</span>
+										<span data-wikidata-property-id="P184" class="no-wikidata"><a href="mailto:tatiana.vaskovskaya@gmail.com">tatiana.vaskovskaya@gmail.com</a></span>
 									</td>
 								</tr>
 							</tbody>
